welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: not found: type color1
def faireLigne(c3: color1, c2: color2) {
                   ^FlowerPot:11: error: not found: type color2
def faireLigne(c3: color1, c2: color2) {
                               ^FlowerPot:12: error: not found: type color1
  Fleur(c3: color1); avance(3); Fleur(c2: color2)
            ^FlowerPot:12: error: not found: type color2
  Fleur(c3: color1); avance(3); Fleur(c2: color2)
                                          ^